finally we can claim different flames